--- a/Mailchimp-Newsletter-API-using-express/package.json
+++ b/Mailchimp-Newsletter-API-using-express/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ShahbaazX786/Mailchimp-API-Webapp#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.5.0",
     "express": "^4.18.1",
     "https": "^1.0.0",
     "nodemon": "^2.0.19",
